--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,42 @@
+*{
+	margin:0;
+	padding: 0;
+}
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	font: 16px Georgia, serif;
+	color: white;
+}
+#page{
+	margin:2% auto;
+}
+.main{
+	border: 1px solid #999;
+	padding: 1%;
+	margin-bottom: 1px;
+	color: black;
+	background: #eee;
+}
+a{
+ 	color: #00B7FF;
 }
 
-a {
-  color: #00B7FF;
+section > div{
+	padding: 20px;
+}
+
+header{
+	text-align: center;
+}
+nav{
+	text-align: center;
+}
+section{
+	text-align: left;
+}
+footer{
+	text-align: center;
+}
+
+nav a{
+	margin: 0px 10px 0px 0px;
 }
