--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,6 +17,7 @@
       <nav class="main" role="navigation">
         <a href="/">Inicio</a>
         <a href="/question">Preguntas</a>
+         <a href="/author">Créditos</a>
       </nav>
 
       <section class="main">
