Tema 10: Múltiples preguntas

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,8 +16,8 @@
 
       <nav class="main" role="navigation">
         <a href="/">Inicio</a>
-        <a href="/question">Preguntas</a>
-         <a href="/author">Créditos</a>
+        <a href="/quizzes">Preguntas</a>
+        <a href="/author">Créditos</a>
       </nav>
 
       <section class="main">
