--- a/views/quizzes/result.ejs
+++ b/views/quizzes/result.ejs
@@ -2,5 +2,5 @@
 	La respuesta es <strong><%= answer %></strong> es <%= result %>.
 </p>
 <p>
-	<a href="/question?answer=<%= answer %>">Inténtelo otra vez </a>
+	<a href="/quizzes/<%= quiz.id %>">Volver</a>
 </p>
