--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -1,5 +1,5 @@
-<form method="get" action="/check">
-	<p>Pregunta: <%= question %> </p>
+<form method="get" action="<%= quiz.id %>/check">
+	<p>Pregunta: <%= quiz.question %> </p>
 	<input type="text" name="answer" value="<%= answer %>" placeholder="Responda aquí"/>
 	<input type="submit" value="Comprobar">
 </form>
