--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,12 +19,49 @@
         <a href="/quizzes">Preguntas</a>
         <a href="/author">Créditos</a>
       </nav>
+
       <section>
         <form method="get" action="/quizzes"><!--/find-->
         <input type="text" name="search" value="" placeholder="Busca quiz"/>
         <input type="submit" value="Buscar">
         </form>
       </section>
+
+      <section>
+        <% if(messages.info){%>
+          <article id="flashinfo">
+            <h3>Información de interés:</h3>
+            <ul>
+              <% for(var i in messages.info){%>
+                <li><%=messages.info[i]%></li>
+              <%}%>
+            </ul>
+          </article>
+        <%}%>
+
+        <% if(messages.success){%>
+          <article id="flashsuccess">
+            <h3>Tareas completadas con éxito:</h3>
+            <ul>
+              <% for(var i in messages.success){%>
+                <li> <%= messages.success[i]%></li>
+              <%}%>
+            </ul>
+          </article>
+        <%}%>
+
+        <% if(messages.error){%>
+          <article id="flasherror">
+            <h3>Errores encontrados:</h3>
+            <ul>
+              <% for(var i in messages.error){%>
+                <li><%=messages.error[i]%></li>
+              <%}%>
+            </ul>
+          </article>
+        <%}%>
+      </section>
+
       <section class="main">
         <div><%- body %></div>
       </section>
