Tema 14: Validacion de entradas

--- a/views/quizzes/new.ejs
+++ b/views/quizzes/new.ejs
@@ -1,6 +1,6 @@
 <p> Añadir pregunta </p>
 <p>
-	<form method="post" action="/quizzes/create">
+	<form method="post" action="/quizzes">
 		<label for="preg">Pregunta:</label>
 		<input type="text" id="preg" name="quiz[question]" value="<%=quiz.question%>" placeholder="Pregunta"/><p>
 		<label for="resp">Respuesta:</label>
