Tema 18: Crear Comentario

--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -1,5 +1,15 @@
-<form method="get" action="<%= quiz.id %>/check">
-	<p>Pregunta: <%= quiz.question %> </p>
-	<input type="text" name="answer" value="<%= answer %>" placeholder="Responda aquí"/>
-	<input type="submit" value="Comprobar">
-</form>
+<p>
+	<form method="get" action="<%= quiz.id %>/check">
+		<p>Pregunta: <%= quiz.question %> </p>
+		<input type="text" name="answer" value="<%= answer %>" placeholder="Responda aquí"/>
+		<input type="submit" value="Comprobar">
+	</form>
+</p>
+<p><a href="/quizzes/<%=quiz.id%>/comments/new"><button>Nuevo comentario</button></a></p>
+
+<p><strong>Comentarios:</strong></p>
+<ul>
+	<%for(var i in quiz.Comments){%>
+		<li><%=quiz.Comments[i].text%></li>
+	<%}%>
+</ul>
