--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,12 +11,24 @@
   <body>
     <div id="page">
       <header class="main">
+
+        <div class="right">
+          <% if(!session.user){%>
+            <a href="/users/new">Registrarse</a>
+            <a href="/session">Login</a>
+          <%} else{%>
+            <a href="/users/<%=session.user.id%>">Perfil</a>
+            <a href="/session?_method=DELETE">Logout</a>
+          <%}%>
+        </div>
+        
         <h2>Quiz<span class="no-narrow">: el juego de las preguntas</span></h2>
       </header>
 
       <nav class="main" role="navigation">
         <a href="/">Inicio</a>
         <a href="/quizzes">Preguntas</a>
+        <a href="/users">Usuarios</a>
         <a href="/author">Créditos</a>
       </nav>
 
