--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,12 +32,12 @@
         <a href="/author">Créditos</a>
       </nav>
 
-      <section>
+      <div class="right">
         <form method="get" action="/quizzes"><!--/find-->
-        <input type="text" name="search" value="" placeholder="Busca quiz"/>
-        <input type="submit" value="Buscar">
+          <input type="text" name="search" value="" placeholder="Busca quiz"/>
+          <input type="submit" value="Buscar">
         </form>
-      </section>
+      </div>
 
       <section>
         <% if(messages.info){%>
