--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -5,14 +5,17 @@
 			<td>
 				<a href="/quizzes/<%= quizzes[i].id %>"><%= quizzes[i].question %></a>
 			</td>
-			<td>
-				<a href="/quizzes/<%= quizzes[i].id %>/edit"><button>Editar</button></a>
-			</td>
-			<td>
-				<a href="/quizzes/<%= quizzes[i].id %>?_method=DELETE" onClick="return confirm('¿ Quieres borrar el quiz <%=quizzes[i].id%>: <%=quizzes[i].question%> ?');"><button>Borrar</button></a>
-			</td>
+			<% if(session.user){%>
+				<td>
+					<a href="/quizzes/<%= quizzes[i].id %>/edit"><button>Editar</button></a>
+				</td>
+				<td>
+					<a href="/quizzes/<%= quizzes[i].id %>?_method=DELETE" onClick="return confirm('¿ Quieres borrar el quiz <%=quizzes[i].id%>: <%=quizzes[i].question%> ?');"><button>Borrar</button></a>
+				</td>
+			<%}%>
 		</tr>
 	<%}%>
 </table>
-
-<a href="/quizzes/new"><button type="button">Crear pregunta</button></a>
+<%if(session.user){%>
+	<a href="/quizzes/new"><button type="button">Crear pregunta</button></a>
+<%}%>
