--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -6,14 +6,17 @@
 				<a href="/users/<%= users[i].id %>"><%= users[i].username%></a>
 				<%=users[i].isAdmin ? "(admin)" : "" %>
 			</td>
-			<td>
-				<a href="/users/<%= users[i].id %>/edit"><button>Editar</button></a>
-			</td>
-			<td>
-				<a href="/users/<%= users[i].id %>?_method=DELETE" onClick="return confirm('¿ Quieres borrar la cuenta <%=users[i].id%>: <%=users[i].username%> ?');"><button>Borrar</button></a>
-			</td>
+			<%if(session.user){%>
+				<td>
+					<a href="/users/<%= users[i].id %>/edit"><button>Editar</button></a>
+				</td>
+				<td>
+					<a href="/users/<%= users[i].id %>?_method=DELETE" onClick="return confirm('¿ Quieres borrar la cuenta <%=users[i].id%>: <%=users[i].username%> ?');"><button>Borrar</button></a>
+				</td>
+			<%}%>
 		</tr>
 	<%};%>
 </table>
-
-<a href="/users/new"><button type="button">Crear usuario</button></a>
+<%if(session.user){%>
+	<a href="/users/new"><button type="button">Crear usuario</button></a>
+<%}%>
