--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -5,7 +5,7 @@
 			<td>
 				<a href="/quizzes/<%= quizzes[i].id %>"><%= quizzes[i].question %></a>
 			</td>
-			<% if(session.user){%>
+			<% if(session.user.isAdmin || session.user.id === quizzes[i].AuthorId){%>
 				<td>
 					<a href="/quizzes/<%= quizzes[i].id %>/edit"><button>Editar</button></a>
 				</td>
