--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -15,7 +15,7 @@
 		var comment = quiz.Comments[i];
 		if(comment.accepted){%>
 			<li><%=comment.text%></li>
-		<%}else if(session.user){%>
+		<%}else if(session.user && (session.user.isAdmin || (quiz.AuthorId === session.user.id))){%>
 			<li><%=comment.text%></li>
 			<a href="/quizzes/<%=quiz.id%>/comments/<%=comment.id%>/accept?_method=PUT"><button>Aceptar</button></a>
 		<%}%>
