--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -8,10 +8,14 @@
 			</td>
 			<%if(session.user){%>
 				<td>
-					<a href="/users/<%= users[i].id %>/edit"><button>Editar</button></a>
+					<%if(session.user.isAdmin || session.user.id === users[i].id){%>
+						<a href="/users/<%= users[i].id %>/edit"><button>Editar</button></a>
+					<%}%>
 				</td>
 				<td>
-					<a href="/users/<%= users[i].id %>?_method=DELETE" onClick="return confirm('¿ Quieres borrar la cuenta <%=users[i].id%>: <%=users[i].username%> ?');"><button>Borrar</button></a>
+					<%if(session.user.isAdmin && session.user.id !== users[i].id){%>
+						<a href="/users/<%= users[i].id %>?_method=DELETE" onClick="return confirm('¿ Quieres borrar la cuenta <%=users[i].id%>: <%=users[i].username%> ?');"><button>Borrar</button></a>
+					<%}%>
 				</td>
 			<%}%>
 		</tr>
